--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,7 +4,7 @@ repositories {
 
     maven { url = 'https://maven.brott.dev/' }
     maven { url= "https://maven.pedropathing.com/" }
-
+    maven { url = "https://maven.rowanmcalpin.com/" }
 }
 
 dependencies {
@@ -17,6 +17,9 @@ dependencies {
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.1'
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
     implementation 'com.pedropathing:pedro:1.0.4'
+    implementation 'com.rowanmcalpin.nextftc:core:0.5.5-beta1'
+    implementation 'com.rowanmcalpin.nextftc:ftc:0.5.5-beta1'
+    implementation 'com.rowanmcalpin.nextftc:pedro:0.5.5-beta1' // Remove if you don't intend to use PedroPathing
 
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
