--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,6 +4,7 @@ repositories {
 
     maven { url = 'https://maven.brott.dev/' }
     maven { url= "https://maven.pedropathing.com/" }
+    maven { url 'https://jitpack.io' }
 
 }
 
@@ -19,6 +20,7 @@ dependencies {
     implementation 'com.pedropathing:pedro:1.0.5'
     implementation 'com.pedropathing:ftclib:1.0.5'
     implementation 'org.ftclib.ftclib:core:2.1.1'
+    implementation 'com.github.StateFactory-Dev:StateFactory:0.3.6'
 
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
